re-uploading projects

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type = "image/png" href="images/ic.png" />
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -31,8 +33,9 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a style = "font-size: 0.90rem" href="index.html">Face Detector & Age Predictor</a></li>
-							<li><a style = "font-size: 0.90rem" href="generic.html">Pokémon Identifier</a></li>
-							<li><a style = "font-size: 0.90rem" href="elements.html">Custom DNA/mRNA Sequence Mapper</a></li>
+							<li><a style = "font-size: 0.90rem" href="pokemon.html">Pokémon Identifier</a></li>
+							<li><a style = "font-size: 0.90rem" href="bio.html">Custom DNA/mRNA Sequence Mapper</a></li>
+							<li><a style = "font-size: 0.90rem" href="news_app.html">News App</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a target = "_blank" href="https://www.linkedin.com/in/skarma1" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
