gallery & civic pages added

--- a/pokemon.html
+++ b/pokemon.html
@@ -23,20 +23,25 @@
 					</header>
 	
 				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li><a style = "font-size: 0.90rem" href="index.html">Face Detector & Age Predictor</a></li>
-							<li class = "active"><a style = "font-size: 0.90rem" href="pokemon.html">Pokémon Identifier</a></li>
-							<li><a style = "font-size: 0.90rem" href="bio.html">Custom DNA/mRNA Sequence Mapper</a></li>
-							<li><a style = "font-size: 0.90rem" href="news_app.html">News App</a></li>
+				<nav id="nav">
+					<ul class="links">
+						<li><a style = "font-size: 1.20rem" href="index.html">Face Detector & Age Predictor</a></li>
+						<li class="active"><a style = "font-size: 1.20rem" href="pokemon.html">Pokémon Identifier</a></li>
+						<li><a style = "font-size: 1.20rem" href="gallery.html">Art Gallery</a></li>
+						<li><a style = "font-size: 1.20rem" href="civic.html">Civil Advocacy</a></li>
+						<li><a style = "font-size: 1.20rem" href="bio.html">Custom DNA/mRNA Sequence Mapper</a></li>
 
-						</ul>
-						<ul class="icons">
-			
-														<li><a target = "_blank" href="https://www.linkedin.com/in/skarma1" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
-						</ul>
-					</nav>
+
+
+					</ul>
+					<ul class="icons">
+						<li><a target = "_blank" href="https://github.com/Shogun486" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a target = "_blank" href="https://www.linkedin.com/in/skarma1" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+
+
+					</ul>
+				</nav>
 
 				<!-- Main -->
 					<div id="main">
@@ -51,12 +56,14 @@
 
 
 									<a class="image fit"><img src="images/pokemon_home.png"  alt="" /></a>
+									<a class="image fit"><img src="images/TechStack2.png"  alt="" /></a>
+
 
 									<p 	style = "font-size: 1.25em"
 >
-								- Collaborated on a web/mobile app that identifies Gen-1 Pokémon from the popular franchise<br />
-								- Utilized React and Expo (on the frontend), along with Django and TensorFlow (on the backend)<br />
-								- Experimented with large image datasets by training a CNN model<br />
+								This Android and Web application allows a user to take a picture from their device of a Pokémon
+								and upload it for identification.</br></br> This project required collaboration between myself and a few classmates who
+								wanted to create a unique app for Pokémon fans. Please check out some demos of this app below!<br />
 									</p>
 								</header>
 								<!-- <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
@@ -74,26 +81,28 @@
 									<heade id="posts">
 							</br>
 
-										<h2><a href="#">Mobile App (Android)<br />
-									</a></h2>
+										<h2>Mobile UI<br />
+									</h2>
 									</header>
 									<video src="images/mobile_demo2.mp4" width = "280px" controls autoplay muted></video>							</br>
 
 																									</br>
-<p>My team found the cropping feature to be essential for the user because this permits anyone to take a picture and feed the algorithm an isolated picture of the Pokémon.</p>
+<p>My team found the cropping feature (as shown in the demo above) to be essential for the user because this permits anyone to take a picture and instantaneously feed the algorithm an isolated picture of the Pokémon. 
+	Similar to how you can use an app to identify a song you don't recognize, with our app you can now identify any Gen-1 Pokémon!
+</p>
 
 								</article>
 								<article>
 									<header>
 							</br>
 
-										<h2><a href="#">Website<br />
-										</a></h2>
+										<h2>Website<br />
+										</h2>
 									</header>
 									<video src="images/desktop_demo.mp4" width = "400px" controls autoplay muted></video>							</br>
 
 																</br>
-<p>A huge challenge in creating this app was making sure the evolution chains were displaying the correct information. Since a single Pokémon could evolve into many other ones (and could be a combination of several types), making sure this feature worked well was important. </p>
+<p>A huge challenge in creating this app was making sure the evolution chains were displaying correctly. Since a single Pokémon could evolve into many other ones (and could be a combination of several types), making sure the right information was being displayed was extremely important. </p>
 
 																		<a class="image fit"><img src="images/pikachu.png" height="500px" width="10vw"  alt="" /></a>
 
