--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						Below you will find a showcase of projects I've worked on.</br>
 						Hope you enjoy and find them interesting!</p>
 						<ul class="actions">
-							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly"></a></li>
 						</ul>
 					</div>
 
@@ -32,13 +32,20 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a style = "font-size: 0.90rem" href="index.html">Face Detector & Age Predictor</a></li>
-							<li><a style = "font-size: 0.90rem" href="pokemon.html">Pokémon Identifier</a></li>
-							<li><a style = "font-size: 0.90rem" href="bio.html">Custom DNA/mRNA Sequence Mapper</a></li>
-							<li><a style = "font-size: 0.90rem" href="news_app.html">News App</a></li>
+							<li class="active"><a style = "font-size: 1.20rem" href="index.html">Face Detector & Age Predictor</a></li>
+							<li><a style = "font-size: 1.20rem" href="pokemon.html">Pokémon Identifier</a></li>
+							<li><a style = "font-size: 1.20rem" href="gallery.html">Art Gallery</a></li>
+							<li><a style = "font-size: 1.20rem" href="civic.html">Civil Advocacy</a></li>
+							<li><a style = "font-size: 1.20rem" href="bio.html">Custom DNA/mRNA Sequence Mapper</a></li>
+
+
+
+
 						</ul>
 						<ul class="icons">
+							<li><a target = "_blank" href="https://github.com/Shogun486" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a target = "_blank" href="https://www.linkedin.com/in/skarma1" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+
 
 						</ul>
 					</nav>
@@ -55,21 +62,25 @@
 									</h3>
 
 									<a class="image fit"><img src="images/face_detect.png"  alt="" /></a>
+									<a class="image fit"><img src="images/TechStack1.png"  alt="" /></a>
 
-									<p 	style = "font-size: 1.25em"
+
+									<p 	text-align="center" style = "font-size: 1.25em"
 >
-								- Built a face-detection system in Python while interning for RadiusAI to use in retail areas <br />
-								- Leveraged Tensorflow to train a CNN model (for predicting ages) reaching a 75% accuracy rate<br />
+								During my internship with RadiusAI, I was encouraged to document my implementation<br />
+								of a prototype Python face-detector / age-group predictor application.<br />
+								</br>
+								You can check out the documentation, along with the code, for this project on<br />
+								GitHub by clicking below.
 
-								- Collaborated closely with the lead data scientist to ensure proper optimizations<br />
-								- Experimented with regression models and presented accuracies on datasets<br />
+
 
 									</p>
 								</header>
 								<!-- <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
 
 								<ul class="actions special">
-									<li><a target = "_blank" style = "font-size: 1.35rem" href="https://github.com/Shogun486/FaceDetector_AgePredictor" class="button large">View Documentation</a></li>
+									<li><a target = "_blank" style = "font-size: 1.35rem" href="https://github.com/Shogun486/FaceDetector_AgePredictor" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
