changing width of video/images

--- a/civic.html
+++ b/civic.html
@@ -104,7 +104,7 @@
 										<h2>Politician Info<br />
 										</h2>
 									</header>
-									<img src="images/horizontal_civic.png" height = "250px" width = "480px" controls autoplay muted></img>							</br>
+									<img src="images/horizontal_civic.png" height = "250px" width = "100%" controls autoplay muted></img>							</br>
 
 																</br>
 <p>All relevant information of each politican is shown, accompanied by an image of their respective party (which, when clicked, will direct users to the party's webpage). All links shown are clickable and properly routed. </p>
