--- a/pokemon.html
+++ b/pokemon.html
@@ -99,7 +99,7 @@
 										<h2>Website<br />
 										</h2>
 									</header>
-									<video src="images/desktop_demo.mp4" width = "400px" controls autoplay muted></video>							</br>
+									<video src="images/desktop_demo.mp4" width ="100%" controls autoplay muted></video>							</br>
 
 																</br>
 <p>A huge challenge in creating this app was making sure the evolution chains were displaying correctly. Since a single Pokémon could evolve into many other ones (and could be a combination of several types), making sure the right information was being displayed was extremely important. </p>
