modified image attributes

--- a/civic.html
+++ b/civic.html
@@ -55,7 +55,7 @@
 									</h3>
 
 									<a class="image fit"><img height= "500" src="images/usa_flag.png"  alt="" /></a>
-									<a class="image fit"><img height="300" src="images/TechStack4.png"  alt="" /></a>
+									<img height="100%" width="100%" src="images/TechStack4.png"  alt="" />
 
 
 
