--- a/civic.html
+++ b/civic.html
@@ -54,8 +54,8 @@
 									<h3>Civil Advocacy Android App<br />
 									</h3>
 
-									<a class="image fit"><img height= "500" src="images/usa_flag.png"  alt="" /></a>
-									<img height="100%" width="100%" src="images/TechStack4.png"  alt="" />
+									<img width= "65%" src="images/usa_flag.png"  alt="" />
+									<img width="100%" src="images/TechStack4.png"  alt="" />
 
 
 
