changing links in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -65,7 +65,7 @@
 											Art Institute of Chicago's API. The distinguishing feature of this website is its focus 
 											on aesthetics.</br></br>  I wanted to make every single artwork on this website 
 											look like it was an artifact hanging on the wall, but more vibrant with ambient colors. </br></br> Similar to how you'll find a wall of frames
-											at the Institute, you'll see in the demo below that I've mimicked this arrangement. Check out a demo <a class="linkPerl" target="_blank" href="https://drive.google.com/file/d/1A5xGm_-8rjULD2RZ3O8BUB6D6p1UUQA_/view">here</a> and my GitHub for this project 
+											at the Institute, you'll see in this <a class="linkPerl" target="_blank" href="https://drive.google.com/file/d/1A5xGm_-8rjULD2RZ3O8BUB6D6p1UUQA_/view">demo</a> that I've mimicked this arrangement. Also check out my GitHub for this project 
 											<a class="linkPerl" target="_blank" href="https://github.com/Shogun486/Art-Institute-of-Chicago-Public-API?tab=readme-ov-file">here</a>.
 							
 											 
