adding details to civic.html

--- a/civic.html
+++ b/civic.html
@@ -62,7 +62,7 @@
 
 									<p 	style = "font-size: 1.25em">
 
-										Through Google's <a class="linkPerl" target="_blank" href="https://developers.google.com/civic-information">Civic Information API</a>, this app allows users to search for national, state, and local political figures
+										Through Google's <a class="linkPerl" target="_blank" href="https://developers.google.com/civic-information">Civic Information API</a>, this Android app allows users to search for national, state, and local political figures
 										by city, state, zip code, or current location. </br></br>The purpose of this app is to let people navigate the political
 										landscape of the USA with ease. Users can quickly know which party politicians belong to, follow them on social media, and 
 										potentially even contact them.
@@ -87,13 +87,13 @@
 									<heade id="posts">
 							</br>
 
-										<h2>Social Media Page<br />
+										<h2>Politician Info<br />
 									</h2>
 									</header>
-									<img src="images/vertical_civic.png" width = "280px" controls autoplay muted></img>							</br>
+									<img src="images/vertical_civic_left.png" width = "65%" controls autoplay muted></img>							</br>
 
 																									</br>
-<p>The app will display all of the politician's active social media outlets, and can direct them straight to the Web.</p>
+																									<p>All relevant information of each politican is shown, accompanied by an image of their respective party (which, when clicked, will direct users to the party's webpage). All link and icons shown are clickable and properly routed. </p>
 
 
 								</article>
@@ -101,13 +101,14 @@
 									<header>
 							</br>
 
-										<h2>Politician Info<br />
+										<h2>Opening External Applications<br />
 										</h2>
 									</header>
-									<img src="images/horizontal_civic.png" height = "250px" width = "100%" controls autoplay muted></img>							</br>
+									<img src="images/vertical_civic_right.png" width = "65%" controls autoplay muted></img>							</br>
 
 																</br>
-<p>All relevant information of each politican is shown, accompanied by an image of their respective party (which, when clicked, will direct users to the party's webpage). All links shown are clickable and properly routed. </p>
+																<p>The app will display all of the politician's active social media outlets, and can direct users to view them in the Web.</p>
+
 
 																		<a class="image fit"><img height="300"src="images/liberty.png" height="200px" width="10vw"  alt="" /></a>
 
