grammar change in civic.html

--- a/civic.html
+++ b/civic.html
@@ -93,7 +93,7 @@
 									<img src="images/vertical_civic_left.png" width = "65%" controls autoplay muted></img>							</br>
 
 																									</br>
-																									<p>All relevant information of each politican is shown, accompanied by an image of their respective party (which, when clicked, will direct users to the party's webpage). All link and icons shown are clickable and properly routed. </p>
+																									<p>All relevant information of each politican is shown, accompanied by an image of their respective party (which, when clicked, will direct users to the party's webpage). All links and icons shown are clickable and properly routed. </p>
 
 
 								</article>
