reformats index.html description section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									<a class="image fit"><img src="images/face_detect.png"  alt="" /></a>
 									<a class="image fit"><img src="images/TechStack1.png"  alt="" /></a>
 									<p 	text-align="center" style = "font-size: 1.6rem; color: rgb(106, 65, 37); font-weight: 350;">
-										During my internship with <a class="linkPerl" target="_blank" href="https://radius.ai/about/" >RadiusAI</a> (via Open Avenues Foundation), I was encouraged to document my implementation
+										During my internship with <a class="linkPerl" target="_blank" href="https://radius.ai/about/" >RadiusAI</a> (via <i>Open Avenues Foundation</i>),<br> I was encouraged to document my implementation
 										of a prototype Python face-detector / age-group predictor application.<br />
 										</br>
 										You can check out the documentation and code for this project on<br />
