adds train-tracking project tab

--- a/index.html
+++ b/index.html
@@ -6,57 +6,53 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type = "image/png" href="images/ic.png" />
+    <link rel="icon" type = "image/png" href="images/ic.png" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 
 	<body class="is-preload">
 			<div id="wrapper" class="fade-in">
-					<div id="intro">
-						<h1 style="color:rgb(254, 236, 214)">SHAGUN<br />
-						 KARMACHARYA</h1>
-						<p style="color:rgb(254, 236, 214)"> Hey, there! </br>Welcome to my personal website! </br>
-						Here, you will find a showcase of projects I've worked on.</br>
-						Hope you enjoy and find them interesting!</p>
-						<ul class="actions">
-							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly"></a></li>
+				<div id="intro">
+					<h1 style="color:rgb(254, 236, 214)">SHAGUN<br />
+					 KARMACHARYA</h1>
+					<p style="color:rgb(254, 236, 214)"> Hey, there! </br>Welcome to my personal website! </br>
+					Here, you will find a showcase of projects I've worked on.</br>
+					Hope you enjoy and find them interesting!</p>
+					<ul class="actions">
+						<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly"></a></li>
+					</ul>
+				</div>
+					
+				<nav id="nav">
+					<ul class="links">
+						<li><a style = "font-size: 1.20rem" href="age_predict.html">Face Detector & Age Predictor</a></li>
+						<li><a style = "font-size: 1.20rem" href="pokemon.html">Pokémon Identifier</a></li>
+						<li><a style = "font-size: 1.20rem" href="gallery.html">3D Art Gallery</a></li>
+						<li class="active"><a style = "font-size: 1.20rem; color: rgb(32, 172, 208);" href="index.html">Trax Chicago</a></li>
+						<li><a style = "font-size: 1.20rem" href="mapper.html">Custom DNA/mRNA Sequence Mapper</a></li>
+					</ul>
+					<ul class="icons">
+						<li><a target = "_blank" href="https://github.com/Shogun486" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a target = "_blank" href="https://www.linkedin.com/in/skarma1" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					</ul>
+				</nav>
+				<div id="main">
+					<article class="post featured">
+						<header class="major">
+							<h3 style="color: rgb(5, 98, 121);">Live Train-Tracking for Chicagoans (Android App)<br/></h3>
+							<img width= "80%" src="images/train.png"  alt="" />
+							<img width="100%" src="images/TechStack4.png"  alt="" />
+							<p style = "font-size: 1.6rem; color: rgb(5, 98, 121); font-weight: 350;">
+								Through the <a class="linkPerl" target="_blank" href="https://www.transitchicago.com/developers/ttdocs/#_Toc296199903">Chicago Transit Authority's API</a>, passengers can view all 'L' stations in Chicagoland, what rail colors they serve, the stops/branches at each station, and the arrival times for each respective run for the next hour.
+								<br><br> The unique aspect of this app is that it includes a visualizer (something not implemented at Chicago train platforms yet), and has a user interface that resembles the design schemes of signs at physical 'L' platforms in Chicago.
+							</p>
+						</header>
+						<ul class="actions special">
+		  <li><a style = "font-size: 1.35rem; background-color: rgb(67, 208, 244);" target="_blank" href="https://drive.google.com/file/d/12-n9BKBHqOi5FeRcROA6kJS2FD4Zhjzx/edit" class="scrolly button large">Demo</a></li>
+							<li><a target="_blank" style = "font-size: 1.35rem; background-color: rgb(67, 208, 244);" href="https://github.com/Shogun486/Trax_Chicago" class="scrolly button large">Github</a></li>
 						</ul>
-					</div>
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a style = "font-size: 1.20rem; color: rgb(106, 65, 37);" href="index.html">Face Detector & Age Predictor</a></li>
-							<li><a style = "font-size: 1.20rem" href="pokemon.html">Pokémon Identifier</a></li>
-							<li><a style = "font-size: 1.20rem" href="gallery.html">3D Art Gallery</a></li>
-							<li><a style = "font-size: 1.20rem" href="civic.html">Civil Advocacy</a></li>
-							<li><a style = "font-size: 1.20rem" href="mapper.html">Custom DNA/mRNA Sequence Mapper</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a target = "_blank" href="https://github.com/Shogun486" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a target = "_blank" href="https://www.linkedin.com/in/skarma1" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						</ul>
-					</nav>
-					<div id="main">
-							<article class="post featured">
-								<header class="major">
-									<h3 style="color: rgb(106, 65, 37);">FACE DETECTOR & AGE PREDICTOR<br />
-									</h3>
-									<a class="image fit"><img src="images/face_detect.png"  alt="" /></a>
-									<a class="image fit"><img src="images/TechStack1.png"  alt="" /></a>
-									<p 	text-align="center" style = "font-size: 1.6rem; color: rgb(106, 65, 37); font-weight: 350;">
-										During my internship with <a class="linkPerl" target="_blank" href="https://radius.ai/about/" >RadiusAI</a> (via <i>Open Avenues Foundation</i>),<br> I was encouraged to document my implementation
-										of a prototype Python face-detector / age-group predictor application.<br />
-										</br>
-										You can check out the documentation and code for this project on<br />
-										GitHub below.
-									</p>
-								</header>
-								<ul class="actions special">
-									<li><a target = "_blank" style = "font-size: 1.35rem; color:#ffffff; background-color: rgb(233, 194, 168);" href="https://github.com/Shogun486/FaceDetector_AgePredictor" class="button large">Github</a></li>
-								</ul>
-							</article>
-							<section class="posts">	
-							</section>
-					</div>
+					</article>
+				</div>
 			</div>
 
 			<script src="assets/js/jquery.min.js"></script>
