--- a/pokemon.html
+++ b/pokemon.html
@@ -17,10 +17,10 @@
 					</header>
 				<nav id="nav">
 					<ul class="links">
-						<li><a style = "font-size: 1.20rem" href="index.html">Face Detector & Age Predictor</a></li>
+						<li><a style = "font-size: 1.20rem" href="age_predict.html">Face Detector & Age Predictor</a></li>
 						<li class="active"><a style = "font-size: 1.20rem; color: rgb(190, 82, 11);" href="pokemon.html">Pokémon Identifier</a></li>
 						<li><a style = "font-size: 1.20rem" href="gallery.html">3D Art Gallery</a></li>
-						<li><a style = "font-size: 1.20rem" href="civic.html">Civil Advocacy</a></li>
+						<li><a style = "font-size: 1.20rem" href="index.html">Trax Chicago</a></li>
 						<li><a style = "font-size: 1.20rem" href="mapper.html">Custom DNA/mRNA Sequence Mapper</a></li>
 					</ul>
 					<ul class="icons">
